Added a bit of style to test sass

--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -1,2 +1,5 @@
 @use "~bootstrap/scss/bootstrap";
 @use "./partials/comics.scss";
+@use "./partials/layout.scss";
+@use "./partials/header.scss";
+@use "./partials/footer.scss";
